feat: Update redfish types
